--- a/framework/CMakeLists.txt
+++ b/framework/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(2XD2_Engine_Framework ${FRAMEWORK_SOURCES})
 
 target_include_directories(2XD2_Engine_Framework PUBLIC
         ${CMAKE_CURRENT_SOURCE_DIR}/include
+        ${CMAKE_CURRENT_SOURCE_DIR}/lib
 
 )
 
