example json look change

--- a/framework/examples/assets/animations/animations-example-config.json
+++ b/framework/examples/assets/animations/animations-example-config.json
@@ -5,11 +5,7 @@
       "name": "animation-1",
       "frame-duration": 0.1,
       "repeat": false,
-      "frames": [
-        "texture_0",
-        "texture_1",
-        "texture_2,"
-      ]
+      "frames": ["texture_0", "texture_1", "texture_2,"]
     }
   ]
 }
