renderer rework for using sfml views and layering

--- a/renderer/CMakeLists.txt
+++ b/renderer/CMakeLists.txt
@@ -13,12 +13,8 @@ target_include_directories(2XD2_Engine_Renderer PUBLIC
 
 find_package(SFML 2.6 COMPONENTS system window graphics REQUIRED)
 
-target_include_directories(2XD2_Engine_Renderer
-        PRIVATE
-        ../framework/lib
-)
-
 target_link_libraries(2XD2_Engine_Renderer
         PUBLIC
         sfml-graphics sfml-window sfml-system
+        2XD2_Engine_Core
 )
