--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,5 +7,12 @@ add_subdirectory(core)
 add_subdirectory(renderer)
 add_subdirectory(framework)
 
+add_subdirectory(examples/pong)
+
+add_library(2XD2_Engine INTERFACE)
+target_link_libraries(2XD2_Engine INTERFACE
+    2XD2_Engine_Framework
+)
+
 enable_testing()
 add_subdirectory(tests)
