--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -82,4 +82,4 @@ jobs:
     - name: Test
       working-directory: ${{ github.workspace }}/build
 
-      run: ctest -C
+      run: ctest -C Release
