Improve ctest command with verbose and rerun options
Enhanced ctest command with additional options for better output.

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -81,5 +81,4 @@ jobs:
 
     - name: Test
       working-directory: ${{ github.workspace }}/build
-
-      run: ctest -C Release
+      run: ctest -C Release --output-on-failure --verbose --rerun-failed --output-on-failure
