--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -83,4 +83,4 @@ jobs:
 
     - name: Test
       working-directory: ${{ github.workspace }}/build
-      run: xvfb-run -a ctest -C Release --output-on-failure --verbose --rerun-failed
+      run: xvfb-run -a ctest -C Release
