--- a/engine/framework/CMakeLists.txt
+++ b/engine/framework/CMakeLists.txt
@@ -10,8 +10,8 @@ add_library(2XD2_Engine_Framework ${FRAMEWORK_SOURCES})
 
 
 target_include_directories(2XD2_Engine_Framework PUBLIC
-        ${CMAKE_CURRENT_SOURCE_DIR}/include
-        ${CMAKE_CURRENT_SOURCE_DIR}/lib
+        include
+        lib
 
 )
 
