--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,11 @@ project(2XD2_Engine)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_subdirectory(core)
-add_subdirectory(renderer)
-add_subdirectory(framework)
+add_subdirectory(engine/core)
+add_subdirectory(engine/renderer)
+add_subdirectory(engine/framework)
 
-add_subdirectory(examples/pong)
+add_subdirectory(engine/examples/pong)
 
 add_library(2XD2_Engine INTERFACE)
 target_link_libraries(2XD2_Engine INTERFACE
