--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ add_subdirectory(engine/core)
 add_subdirectory(engine/renderer)
 add_subdirectory(engine/framework)
 
-add_subdirectory(engine/examples/pong)
+add_subdirectory(examples/pong)
 
 add_library(2XD2_Engine INTERFACE)
 target_link_libraries(2XD2_Engine INTERFACE
